Renamed app to VKontakte

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ eu.tiliado.NuvolaAppVkontakte.desktop
 eu.tiliado.NuvolaAppVkontakte.data.service
 eu.tiliado.NuvolaAppVkontakte.appdata.xml
 vkontakte.tar.gz
+.idea/workspace.xml
+.idea/tasks.xml
